# dot

./: ARCHITECTURE.md  CONJECTURES.md  DISCOVERIES.md  QUICKSTART.md  README.md  ROOM.md  SPEC.md  cold_open.hex  cold_open_annotated.txt  dot_chain.py  dot_cli.py  dot_core.py  dot_crypto.py  genesis.dot  genesis.dot.hex  genesis_key.pub  pyproject.toml
experiments/: RESULTS.md  exp1_genesis.py  exp2_integrity.py  exp3_minimum.py  exp4_cold_open.py
mcp/: README.md  index.ts
mcp/lib/: embed.ts
mcp/nostr/: broadcast.ts
mcp/tools/: observe.ts  room.ts  seal.ts  search.ts  verify.ts
